# cv_finetune

./: .gitignore  README.md  data.ipynb  data_augmentation.ipynb  image_captioning.ipynb  image_captions.json  image_data_preprocessor.py  pyproject.toml  siamese.ipynb  siameseresnet.ipynb  three.py
AFINAL/clip/: clip_blip.json  gpt.ipynb  train_val_test_split_to_json.ipynb
AFINAL/clip/clip_blip_finetune/: clip_blip_finetune.ipynb
AFINAL/clip/clip_blip_ootb/: clip_blip.ipynb
AFINAL/clip/clip_gpt_finetune/: clip_gpt_new.ipynb
AFINAL/clip/clip_gpt_ootb/: clip_gpt.ipynb  new_captions.ipynb
AFINAL/clip/output/: test_data.json  train_data.json
AFINAL/clip/utility/: add_paths_to_json.ipynb  gpt_caption generator.ipynb
AFINAL/dinov2/: dinov2.ipynb  dinov2_fine_tune.ipynb
AFINAL/resnet/: image_paths.json  resnet50.ipynb  resnet50_fine_tune.ipynb
AFINAL/resnet/output/: val_data.json
AFINAL/vgg16/: vgg16.ipynb
CNN/: new.ipynb  triplet.ipynb
CNN/logs/fit/20240516-220750/train/: events.out.tfevents.1715897270.codespaces-e1acbe.57342.0.v2
CNN/logs/fit/20240516-220818/train/: events.out.tfevents.1715897298.codespaces-e1acbe.57342.1.v2
CNN/logs/fit/20240516-221044/train/: events.out.tfevents.1715897444.codespaces-e1acbe.58564.0.v2
CNN/logs/fit/20240516-221345/train/: events.out.tfevents.1715897626.codespaces-e1acbe.59726.0.v2
resnet/: other.ipynb
